Fixed the double border issue on the select input.

--- a/client/src/pages/RecordReceipt.scss
+++ b/client/src/pages/RecordReceipt.scss
@@ -12,6 +12,7 @@
 	}
 	&__storeSelect {
 		@include inputBox;
+		margin: 0;
 		&:disabled {
 			opacity: 0.6;
 		}
